--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/intake-forecast
+      url: https://pypi.org/p/intake-oceantide
     permissions:
       id-token: write
     steps:
